--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -528,7 +528,7 @@ a.button {
 }
 a.button small {
   display: block;
-  font-size: 11px;
+  font-size: 16px;
 }
 header a.button {
   position: absolute;
@@ -536,6 +536,9 @@ header a.button {
   right: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
+
+
+
 aside a.button {
   display: block;
   width: 138px;
@@ -543,6 +546,32 @@ aside a.button {
   margin-bottom: 20px;
   font-size: 21px;
   background: transparent url(../images/download-button.png) 0 0 no-repeat;
+}
+
+
+a.ghbutton {
+  width: 134px;
+  height: 58px;
+  padding-top: 22px;
+  padding-left: 68px;
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 23px;
+  line-height: 1.2;
+  color: #fff;
+}
+a.ghbutton small {
+  display: block;
+  font-size: 16px;
+}
+
+aside a.ghbutton {
+  display: block;
+  width: 138px;
+  padding-left: 64px;
+  margin-bottom: 20px;
+  font-size: 21px;
+  font-color: white;
+  background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
 
 code, pre {
